<resources>
    <string name="app_name">Quotable</string>
    <string name="create_profile_info_text">Choose a profile photo by selecting the avatar, then enter a username and bio</string>
    <string name="text_username">Username</string>
    <string name="text_bio">Bio</string>
    <string name="create_profile_activity_title">Create Profile</string>
    <string name="error_general">Something went wrong</string>
    <string name="error_bigger_file">File size is bigger than 10mb</string>
    <string name="error_incorrect_file_type">Incorrect file type</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="error_smaller_image">Image is too small. Required image size is 100x100 px</string>
    <string name="error_fail_crop_image">Failed to crop image</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_profile_name_length">Max length of the name should be less than 120 characters</string>
    <string name="internet_connection_failed">Internet connection failed</string>
    <string name="loading">Loading..</string>
    <string name="button_ok">OK</string>
    <string name="press_once_again_to_exit">Press again to exit</string>
    <string name="permissions_not_granted">Permission not granted</string>
    <string name="error_google_play_services">Google play services error</string>
    <string name="google_web_client_id">521714104273-cndalm6rplbttjch09cc3j8m71p7m0rs.apps.googleusercontent.com</string>
    <string name="error_authentication">Authentication error</string>
    <string name="prompt_name">Name</string>
    <string name="button_title_save">Save</string>
    <string name="error_fail_create_profile">Failed to create profile</string>
    <string name="button_login_with_google">Login with Google</string>
    <string name="search_menu_item">Search</string>
    <string name="profile_menu_item">Profile</string>
    <string name="following_post_menu_item">Following</string>
    <string name="create_post_shortcut_label">Create post</string>

    <string name="post_author_image_transition_name" translatable="false">post_author_image_transition_name</string>
    <string name="button_follow_title">Follow</string>
    <string name="button_follow_back_title">Follow back</string>
    <string name="button_following">Following</string>
    <string name="unfollow_user_message">Unfollow %1$s?</string>
    <string name="button_title_cancel">Cancel</string>
    <string name="button_title_unfollow">Unfollow</string>
    <string name="sign_out_menu_label">Sign out</string>
    <string name="edit_profile_menu_label">Edit profile</string>
    <string name="create_post_full_menu_label">Create post</string>
    <string name="permission_denied_error">Permission denied</string>
    <string name="error_general_post">Something went wrong with post, id: %1$s</string>
    <string name="message_post_was_removed">Post was removed</string>
    <string name="now_time_range">now</string>
    <string name="duration_week_shortest">%1$d w</string>
    <string name="duration_days_shortest">%1$d d</string>
    <string name="duration_hours_shortest">%1$d h</string>
    <string name="duration_minutes_shortest">%1$d m</string>
    <string name="warning_empty_quote">A quote is required</string>
    <string name="error_fail_create_post">Failed to create post</string>
    <string name="create_post_menu_label">Post</string>
    <string name="error_fail_update_post">Failed to update post</string>
    <string name="message_saving">Saving...</string>
    <string name="error_post_was_removed">Post was removed</string>
    <string name="comment_text_hint">Enter your comment...</string>
    <string name="send_comment_button_label">Send</string>
    <string name="add_report">Report</string>
    <string name="report_text">You can report this post if it contains violence, bullying and threats, hate speech, tragic events and sexually explicit contents. Nobody will see the post if you report it. You can\\\'t delete your report.</string>
    <string name="report_sent">Report was sent successfully</string>
    <string name="confirm_deletion_post">Are you sure you want to delete this post?</string>
    <string name="removing">Removing post...</string>
    <string name="error_fail_remove_post">Failed to remove post</string>
    <string name="message_comment_was_removed">Comment was removed</string>
    <string name="message_comment_was_edited">Comment has been edited</string>
    <string name="title_edit_comment">Edit comment</string>
    <string name="collapse_text_label">show less</string>
    <string name="expand_text_label">show more</string>
    <string name="label_comments">Comments (%1$d):</string>
    <string name="message_post_was_created">Post was created</string>

    <plurals name="new_posts_counter_format">
        <item quantity="one">%1$d new post</item>
        <item quantity="other">%1$d new posts</item>
    </plurals>

    <plurals name="likes_counter_format">
        <item quantity="one">like</item>
        <item quantity="other">likes</item>
    </plurals>

    <plurals name="posts_counter_format">
        <item quantity="one">post</item>
        <item quantity="other">posts</item>
    </plurals>

    <plurals name="followers_counter_format">
        <item quantity="one">follower</item>
        <item quantity="other">followers</item>
    </plurals>

    <plurals name="followings_counter_format">
        <item quantity="one">following</item>
        <item quantity="other">followings</item>
    </plurals>

    <string name="post_image_transition_name" translatable="false">post_image_transition</string>
    <string name="profile_label">Profile</string>
    <string name="new_like_channel_name">New Like</string>
    <string name="new_comment_channel_name">New Comment</string>
    <string name="message_empty_list">You don\\\'t have any %1$s yet</string>
    <string name="title_followings">Followings</string>
    <string name="title_followers">Followers</string>
    <string name="message_following_posts_empty">Follow someone to see their new posts</string>
    <string name="new_follower_channel_name">New Follower</string>
    <string name="empty_posts_search_message">No posts found</string>
    <string name="posts_tab_title">Posts</string>
    <string name="users_tab_title">Users</string>
    <string name="empty_user_search_message">No posts were found</string>
    <string name="search_hint">Search...</string>
    <string name="following_label">Following</string>
    <string name="dialog_privacy_policy">
        By using Quotable, you agree to the Privacy Policy and consent to having your personal data, behavior transferred outside the EU.
    </string>
    <string name="privacy_policy_link">http://app.termly.io/document/privacy-policy/5b6df71c-52cf-4e91-9201-56301e7a5a46/</string>
    <string name="mention_activity_label">Mention Test</string>
</resources>
